# social_security_motocycle

./: .gitignore  docker-compose.prod.yml
backend/: Cargo.toml  Dockerfile  diesel.toml  railway.toml
backend/src/: main.rs  schema.rs
backend/src/application/: mod.rs  state.rs
backend/src/application/use_cases/: add_service_item.rs  add_stock_item.rs  checkout_cart.rs  connect_line.rs  create_service_order.rs  delete_feedback.rs  delete_service_order.rs  delete_stock_item.rs  disconnect_line.rs  get_dashboard_stats.rs  get_profile.rs  get_service_order_detail.rs  list_feedbacks.rs  list_notifications.rs  list_service_orders.rs  list_stock_items.rs  list_users.rs  login.rs  logout.rs  mark_notification_read.rs  mod.rs  process_payment.rs  promote_user.rs  refresh_token.rs  register_user.rs  remove_service_item.rs  submit_feedback.rs  update_order_photos.rs  update_order_status.rs  update_profile.rs  update_stock_item.rs  use_stock_item.rs
backend/src/domain/: mod.rs  value_objects.rs
backend/src/domain/notification/: gateway.rs
backend/src/domain/payment/: gateway.rs
backend/src/domain/service/: entity.rs  mod.rs  stock_entity.rs
backend/src/domain/user/: entity.rs  mod.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/db/: connection.rs  models.rs  schema.rs
backend/src/infrastructure/db/migrations/2026-02-15-092133-0000_create_initial_schema/: down.sql  up.sql
backend/src/infrastructure/db/migrations/2026-02-17-143549-0000_update_enums_for_notifications/: down.sql  up.sql
backend/src/infrastructure/db/migrations/2026-02-17-144756-0000_sync_line_profile_fields/: down.sql  up.sql
backend/src/infrastructure/db/migrations/2026-02-23-164733-0000_allow_nullable_bike_id/: down.sql  up.sql
backend/src/infrastructure/db/migrations/2026-02-23-212200-0000_allow_duplicate_license_plate/: down.sql  up.sql
backend/src/infrastructure/db/migrations/2026-02-28-112801-0000_create_feedbacks_table/: up.sql
backend/src/infrastructure/db/migrations/2026-02-28-162521-0000_add_missing_tables_stock_and_tokens/: down.sql  up.sql
backend/src/infrastructure/db/repositories/: feedback.rs  inventory.rs  mod.rs  motorcycle.rs  notification.rs  refresh_token.rs  repair_log.rs  service_item.rs  service_order.rs  stock.rs  user.rs  user_line_account.rs
backend/src/infrastructure/http/middleware/: auth.rs  mod.rs
backend/src/infrastructure/http/routes/: mod.rs
backend/src/infrastructure/security/: password.rs
backend/src/infrastructure/security/jwt/: service.rs
frontend/lib/: api.ts  (+1 more)
(+42 files in other folders)
