[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "rand"] }
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
diesel = { version = "2.3.6", features = ["chrono", "postgres", "r2d2", "numeric"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["use_pem"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
